# PortfolioFrom13F

./: .gitignore  README.md  parse_13f_table.py  pyproject.toml  requirements.txt  run_pipeline.py  save_13f_range.py  setup.cfg  setup.ps1  setup.sh
ETL/: README.md  etl_pipeline.py
ETL/DAL/: dal.py
ETL/DataHandlers/: WebDataFetcher.py  handlers.py
ETL/DataHandlers/DBDataHandler/: db_abstract.py  graph_db_handler.py  sql_db_handler.py
ETL/DataHandlers/FilesDataHandler/: csv_handler.py  xml_handler.py
ETL/Extractors/: base_strategy.py  csv_strategy.py  db_strategy.py  extractor_context.py  xml_strategy.py
ETL/Extractors/Database/: db_strategy.py
ETL/Extractors/LocalFile/: csv_strategy.py  xml_strategy.py
ETL/Load/: load.py
ETL/Logging/: logger.py
ETL/Manipulation/: manipulation.py
ETL/Transform/: manipulation.py
ETL/Transofrm/: manipulation.py
ETL/dal/: dal.py
ETL/data_handlers/db_data_handler/: sql_db_handler.py
ETL/load/: load.py
ETL/logger/: logger.py
ETL/manipulation/: manipulation.py
data/: quarterly_datasets.json
