[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "PortfolioFrom13F"
version = "1.0.0"
requires-python = ">=3.14.0"
dependencies = [
    "python-dotenv==1.0.0",
    "pytest==7.4.3",
    "black==23.12.1",
    "isort==5.13.2",
    "pylint==3.0.3",
    "ruff==0.1.11"
]
